--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  height: 1200px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
@@ -9,5 +10,18 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: rgba(192, 192, 192, 0.82);
+}
+
+::-webkit-scrollbar-track {
+  -webkit-border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(6, 147, 12);
 }
