--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  box-sizing: border-box;
   margin: 0;
   height: 1200px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
